--- a/nuget/Softeq.ZendeskBelvedereCore.nuspec
+++ b/nuget/Softeq.ZendeskBelvedereCore.nuspec
@@ -10,10 +10,10 @@
         <summary>Xamarin.Android binding library for Zendesk Belvedere Core</summary>
         <description>Media picker for Android.</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android, picker</tags>
         <dependencies>
             <!-- https://github.com/zendesk/belvedere/blob/v3.0.5/belvedere-core/build.gradle -->
@@ -25,6 +25,9 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/BelvedereCore.Bindings.Droid/bin/Release/BelvedereCore.Bindings.Droid.dll" target="lib/monoandroid12.0/BelvedereCore.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/BelvedereCore.Bindings.Droid/bin/Release/BelvedereCore.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
