--- a/nuget/Softeq.ZendeskChatSocketClient.Droid.nuspec
+++ b/nuget/Softeq.ZendeskChatSocketClient.Droid.nuspec
@@ -10,21 +10,26 @@
         <summary>Xamarin.Android binding library for Zendesk Chat Socket Client</summary>
         <description>Zendesk Chat Socket Client</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
                 <dependency id="Softeq.ZendeskJavaCommon" version="2.0.0.1" />
 
+                <dependency id="GoogleGson" version="2.8.9.3" />
+                <dependency id="Square.OkHttp3" version="4.9.2.3" />
                 <dependency id="Xamarin.AndroidX.Annotation" version="1.3.0.4" />
                 <dependency id="Xamarin.Kotlin.StdLib.Jdk8" version="1.6.10" />
             </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/ChatSocketClient.Bindings.Droid/bin/Release/ChatSocketClient.Bindings.Droid.dll" target="lib/monoandroid12.0/ChatSocketClient.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/ChatSocketClient.Bindings.Droid/bin/Release/ChatSocketClient.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
