--- a/nuget/Softeq.ZendeskCore.Droid.nuspec
+++ b/nuget/Softeq.ZendeskCore.Droid.nuspec
@@ -10,10 +10,10 @@
         <summary>Xamarin.Android binding library for Zendesk Core SDK</summary>
         <description>Zendesk Core SDK</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
@@ -23,7 +23,6 @@
                 <dependency id="Square.OkHttp3.LoggingInterceptor" version="4.4.1" />
                 <dependency id="Square.OkHttp3" version="4.9.2.3" />
                 <dependency id="Square.Retrofit2.ConverterGson" version="2.9.0" />
-                <dependency id="Square.Retrofit2" version="2.9.0" />
                 <dependency id="Xamarin.AndroidX.Annotation" version="1.3.0.4" />
                 <dependency id="Xamarin.Google.Dagger" version="2.41.0.2" />
                 <dependency id="Xamarin.Jakewharton.DiskLruCache" version="2.0.2.6" />
@@ -32,6 +31,9 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/CoreSDK.Bindings.Droid/bin/Release/CoreSDK.Bindings.Droid.dll" target="lib/monoandroid12.0/CoreSDK.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/CoreSDK.Bindings.Droid/bin/Release/CoreSDK.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
