--- a/nuget/Softeq.ZendeskGuide.Droid.nuspec
+++ b/nuget/Softeq.ZendeskGuide.Droid.nuspec
@@ -10,10 +10,10 @@
         <summary>Xamarin.Android binding library for Zendesk Guide SDK</summary>
         <description>Zendesk Guide SDK</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
@@ -28,8 +28,6 @@
                 <dependency id="Square.OkHttp3" version="4.9.2.3" />
                 <dependency id="Xamarin.AndroidX.AppCompat" version="1.0.2.1" />
                 <dependency id="Xamarin.AndroidX.CardView" version="1.0.0.16" />
-                <dependency id="Xamarin.AndroidX.Core" version="1.3.2.3" />
-                <dependency id="Xamarin.AndroidX.Fragment" version="1.2.5.5" />
                 <dependency id="Xamarin.AndroidX.Legacy.Support.V4" version="1.0.0" />
                 <dependency id="Xamarin.AndroidX.RecyclerView" version="1.2.1.7" />
                 <dependency id="Xamarin.Google.Android.Material" version="1.4.0.6" />
@@ -39,6 +37,9 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/Guide.Bindings.Droid/bin/Release/Guide.Bindings.Droid.dll" target="lib/monoandroid12.0/Guide.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/Guide.Bindings.Droid/bin/Release/Guide.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
