--- a/nuget/Softeq.ZendeskSDKConfigurations.Droid.nuspec
+++ b/nuget/Softeq.ZendeskSDKConfigurations.Droid.nuspec
@@ -10,10 +10,10 @@
         <summary>Xamarin.Android binding library for Zendesk SDK Configurations</summary>
         <description>Zendesk SDK Configurations</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
@@ -25,6 +25,9 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/ConfigurationSDK.Bindings.Droid/bin/Release/ConfigurationSDK.Bindings.Droid.dll" target="lib/monoandroid12.0/ConfigurationSDK.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/ConfigurationSDK.Bindings.Droid/bin/Release/ConfigurationSDK.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
