--- a/nuget/Softeq.ZendeskSupport.Droid.nuspec
+++ b/nuget/Softeq.ZendeskSupport.Droid.nuspec
@@ -10,35 +10,28 @@
         <summary>Xamarin.Android binding library for Zendesk Support SDK</summary>
         <description>Zendesk Support SDK</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
                 <dependency id="Softeq.ZendeskBelvedere" version="3.0.5.1" />
                 <dependency id="Softeq.ZendeskBelvedereCore" version="3.0.5.1" />
-                <dependency id="Softeq.ZendeskChatProviders.Droid" version="3.3.6.1" />
-                <dependency id="Softeq.ZendeskChat.Droid" version="3.3.6.1" />
-                <dependency id="Softeq.ZendeskChatSocketClient.Droid" version="6.1.3.1" />
-                <dependency id="Softeq.ZendeskChatVisitorClient.Droid" version="8.3.3.1" />
                 <dependency id="Softeq.ZendeskSDKConfigurations.Droid" version="2.0.3.1" />
                 <dependency id="Softeq.ZendeskCore.Droid" version="4.0.8.1" />
                 <dependency id="Softeq.ZendeskGuide.Droid" version="1.0.9.1" />
                 <dependency id="Softeq.ZendeskJavaCommon" version="2.0.0.1" />
                 <dependency id="Softeq.ZendeskMessaging.Droid" version="5.2.5.1" />
                 <dependency id="Softeq.ZendeskMessagingAPI.Droid" version="5.2.5.1" />
-                <dependency id="Softeq.ZendeskSuas" version="1.2.0.1" />
+                <!-- <dependency id="Softeq.ZendeskSuas" version="1.2.0.1" /> -->
                 <dependency id="Softeq.ZendeskSupportProviders.Droid" version="5.1.0.1" />
 
                 <dependency id="GoogleGson" version="2.8.9.3" />
-                <dependency id="Square.OkHttp3" version="4.9.2.3" />
                 <dependency id="Square.Picasso" version="2.8.0.5" />
                 <dependency id="Xamarin.AndroidX.AppCompat" version="1.0.2.1" />
                 <dependency id="Xamarin.AndroidX.CardView" version="1.0.0.16" />
-                <dependency id="Xamarin.AndroidX.Core" version="1.3.2.3" />
-                <dependency id="Xamarin.AndroidX.Fragment" version="1.2.5.5" />
                 <dependency id="Xamarin.AndroidX.Legacy.Support.V4" version="1.0.0" />
                 <dependency id="Xamarin.AndroidX.MultiDex" version="2.0.1.13" />
                 <dependency id="Xamarin.AndroidX.RecyclerView" version="1.2.1.7" />
@@ -50,6 +43,9 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/SupportSDK.Bindings.Droid/bin/Release/SupportSDK.Bindings.Droid.dll" target="lib/monoandroid12.0/SupportSDK.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/SupportSDK.Bindings.Droid/bin/Release/SupportSDK.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
