--- a/nuget/Softeq.ZendeskSupportProviders.Droid.nuspec
+++ b/nuget/Softeq.ZendeskSupportProviders.Droid.nuspec
@@ -10,10 +10,10 @@
         <summary>Xamarin.Android binding library for Zendesk Support SDK Providers</summary>
         <description>Zendesk Support SDK Providers</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
@@ -22,7 +22,6 @@
                 <dependency id="Softeq.ZendeskGuideProviders.Droid" version="1.0.9.1" />
 
                 <dependency id="GoogleGson" version="2.8.9.3" />
-                <dependency id="Square.OkHttp3" version="4.9.2.3" />
                 <dependency id="Square.Retrofit2" version="2.9.0" />
                 <dependency id="Xamarin.AndroidX.Annotation" version="1.3.0.4" />
                 <dependency id="Xamarin.Google.Dagger" version="2.41.0.2" />
@@ -31,6 +30,9 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/SupportProvidersSDK.Bindings.Droid/bin/Release/SupportProvidersSDK.Bindings.Droid.dll" target="lib/monoandroid12.0/SupportProvidersSDK.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/SupportProvidersSDK.Bindings.Droid/bin/Release/SupportProvidersSDK.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
